# ChangeLog for net-analyzer/portmon
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/portmon/ChangeLog,v 1.6 2004/07/01 20:13:37 squinky86 Exp $

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> portmon-1.9.ebuild,
  portmon-2.0.ebuild:
  change virtual/glibc to virtual/libc

  28 Apr 2004; David Holm <dholm@gentoo.org> portmon-2.0.ebuild:
  Added to ~ppc.

*portmon-2.0 (27 Apr 2004)

  27 Apr 2004; Martin Holzer <mholzer@gentoo.org> portmon-2.0.ebuild:
  Version bumped.

  22 Mar 2004; Michael Boman <mboman@gentoo.org> portmon-1.9.ebuild:
  Changed RDEPEND to fix bug 45343.

*portmon-1.9 (28 Jul 2003)

  28 Jul 2003; Greg Fitzgerald <gregf@gentoo.org> portmon-1.9.ebuild,
  files/portmon.init:
  Initial Release. Closes bug #23475 Reported by Chuck Short
  <chuck_short@rogers.com>
