@@ -1,12 +1,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/portmon/Attic/portmon-1.9.ebuild,v 1.6 2004/07/01 20:13:37 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/portmon/Attic/portmon-1.9.ebuild,v 1.7 2004/07/10 11:41:56 eldad Exp $
 
 DESCRIPTION="Portmon is a netwok service monitoring daemon."
 SRC_URI="http://aboleo.net/software/portmon/downloads/${P}.tar.gz"
 HOMEPAGE="http://aboleo.net/software/portmon/"
 
-KEYWORDS="~x86"
+KEYWORDS="x86"
 SLOT="0"
 LICENSE="GPL-2"
 IUSE=""
